--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -30,20 +30,23 @@ header>div>ul>li {
 .table-box-1 {
 	width: 90%;
 	white-space: nowrap;
+	text-align: center;
 }
 
+.table-box-1 tr,
+.table-box-1 td {
+    padding: 5px;
+}
+
+
 .table-box-1>thead tr {
-	background: linear-gradient(to right, #536976, #292e49); /* 로얄블루 색상 */
+	background:#536976; /* 로얄블루 색상 */
 }
 
 .table-box-1 th {
-	/* 	background-color: #1d96b2; */
-	/* 	background: linear-gradient(to right, #c0c0aa, #1cefff); */
 	border: 1px solid rgba(255, 0, 0, 0.1);
 	font-weight: normal;
 	font-size: 13px;
-	text-align: left;
-	color: white;
 	box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -53,13 +56,15 @@ header>div>ul>li {
 	border: 1px solid rgba(255, 0, 0, 0.1);
 }
 
-
-
 /* 기본 네비게이션 2차 메뉴 스타일 */
+header>div>ul>li {
+	position: relative;
+	}
 header>div>ul>li>ul {
 	display: none;
 	position: absolute;
 	background-color: white;
+	right: 0;
 	z-index: 1;
 }
 
@@ -68,34 +73,3 @@ header>div>ul>li:hover>ul {
 	display: block;
 }
 
-/* 대쉬보드 메뉴바 */
-.side_bar {
-	width: 100px;
-	height: 100%;
-	overflow: auto;
-	position: fixed;
-	border-right: thin solid gold; /* 	색깔 임시로 */
-}
-
-.side_menu>ul>li>a {
-	display: block;
-	padding-right: 10px;
-	padding-left: 5px;
-	padding-top: 10px;
-	/* 	background-color: skyblue; */
-	border-bottom: 1px solid black;
-	margin-bottom: 10px;
-	margin-top: 10px;
-	color: black;
-}
-
-.side_bar_push {
-	margin-left: 100px;
-}
-
-/* 페이지 제목 위치 */
-#pageTitle {
-	left: 105px;
-	position: absolute;
-	top: 35px;
-}
